# napari-bioio

./: .gitignore  CONTRIBUTING.md  Justfile  README.md  pyproject.toml
.github/workflows/: ci.yml
.napari/: DESCRIPTION.md
napari_bioio/: __init__.py  core.py  napari.yaml
napari_bioio/tests/: conftest.py  test_core.py
scripts/: download_test_resources.py
