# https://peps.python.org/pep-0517/
[build-system]
requires = ["setuptools>=65", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

# https://peps.python.org/pep-0621/
[project]
name = "napari-bioio"
description = "BioIO bindings for napari"
keywords = [
  "aicsimageio",
  "bioio",
  "CZI",
  "image reading",
  "imageio",
  "LIF",
  "metadata",
  "napari",
  "ND2",
  "TIFF",
  "Zarr",
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3" }
authors = [
  { email = "evamaxfieldbrown@gmail.com", name = "Eva Maxfield Brown" },
  { email = "talley.lambert@gmail.com", name = "Talley Lambert" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Framework :: napari",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Visualization",
  "Topic :: Scientific/Engineering",
]
dynamic = ["version"]
dependencies = [
  # Only include BSD-3 compatible dependencies
  "bioio>=1.0.2",
  "bioio-imageio>=1",
  "bioio-dv>=1.0.0",
  "bioio-sldy>=1.0.1",
  "bioio-nd2>=1.0.0",
  "bioio-tifffile>=1",
  "bioio-tiff-glob>=1",
  "bioio-ome-tiff>=1",
  "bioio-ome-zarr>=1.0.1",
  # General deps
  "fsspec[http]>=2022.7.1",
  "napari>=0.4.11",
  "psutil>=5.7.0",
]

[project.urls]
Homepage = "https://github.com/AllenCellModeling/napari-aicsimageio"
"Bug Tracker" = "https://github.com/AllenCellModeling/napari-aicsimageio/issues"
Documentation = "https://github.com/AllenCellModeling/napari-aicsimageio#README.md"
"User Support" = "https://github.com/AllenCellModeling/napari-aicsimageio/issues"

# extras
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
[project.optional-dependencies]
test = [
  "PyQt5",
  "pytest>=5.4.3",
  "pytest-qt~=4.0",
  "pytest-raises>=0.11",
  "pytest-xvfb~=2.0",
]
lint = [
  "pre-commit>=2.20.0",
]
dev = [
  "ipython",
]
data = [
  "quilt3>=3.4",
]

# Entry points
# https://peps.python.org/pep-0621/#entry-points
[project.entry-points."napari.manifest"]
napari-bioio = "napari_bioio:napari.yaml"

# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[tool.setuptools]
zip-safe = false
include-package-data = true
packages = { find = { exclude = ['scripts'] } }

[tool.setuptools.package-data]
"*" = ["*.yaml"]

# https://github.com/mgedmin/check-manifest#configuration
[tool.check-manifest]
ignore = [
  ".editorconfig",
  ".napari/**/*",
  ".pre-commit-config.yaml",
  "CODE_OF_CONDUCT.md",
  "codecov.yml",
  "CONTRIBUTING.md",
  "images/**/*",
  "Makefile",
  "scripts/**/*",
]

# https://docs.pytest.org/en/6.2.x/customize.html
[tool.pytest.ini_options]
minversion = "6.0"
xfail_strict = true
filterwarnings = [
  "error:::napari_bioio",                       # make all internal warnings errors (test them directly)
  "ignore:distutils Version classes are deprecated:",
]

# tools
[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

# https://github.com/charliermarsh/ruff
[tool.ruff]
line-length = 88
target-version = "py310"
extend-select = [
    "E",      # style errors
    "F",      # flakes
    "D",      # pydocstyle
    "I001",   # isort
    "UP",     # pyupgrade
    "N",      # pep8-naming
    # "S",    # bandit
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "A001",   # flake8-builtins
    "RUF",    # ruff-specific rules
    "RUF100", # Unused noqa directive
]
extend-ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D103", # Missing docstring in public function
    "D107", # Missing docstring in __init__
    "D203", # 1 blank line required before class docstring
    "D205", # 1 blank line required between summary line and description
    "D212", # Multi-line docstring summary should start at the first line
    "D213", # Multi-line docstring summary should start at the second line
    "D413", # Missing blank line after last section
    "D416", # Section name should end with a colon
]

[tool.ruff.per-file-ignores]
"**/notebooks/*" = ["E501", "B018"]
"**/tests/*.py" = ["D"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
show_error_codes = true